--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <body>
 <center>
 <h1>Hello!</h1>
-  <script src="/static/neko/neko.js"></script>
+  <script src="oneko.js"></script>
 </center>
 </body>
 
 </html>
+
 
